# nesrs

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/api/: emulator.rs  ipc.rs  mod.rs
src/cpu/: cpu.rs
src/hw/: bus.rs  cartridge.rs  cpu.rs  emulator.rs  joypad.rs  memory.rs  mod.rs  ppu.rs
src/hw/bus/: tests.rs
src/hw/cartridge/: tests.rs
src/hw/cpu/: opcodes.rs  tests.rs  tracer.rs
src/hw/ppu/: address_register.rs  controller_register.rs  mask_register.rs  status_register.rs
src/rendering/: frame.rs  renderer.rs  tile_viewer.rs
tests/: nestest.rs
