[package]
name = "nesrs"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
bitflags = { version = "2.9.1", features = ["serde"] }
anyhow = "1.0.98"
thiserror = "2.0.12"
strum = "0.27.1"
strum_macros = "0.27.1"
log = "0.4.27"
sdl2 = "0.38.0"
serde = { version = "1.0.219", features = ["derive"] }
serde-big-array = "0.5.1"
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }